add page room details

--- a/src/blocks/room-info/room-info.pug
+++ b/src/blocks/room-info/room-info.pug
@@ -28,4 +28,4 @@ mixin room-info(options)
 
 
 
-//- +room-info({комфорт:"", уют:""})
+//- +room-info({комфорт||удобство||уют:"description", комфорт||удобство||уют:"description"})
