--- a/src/style.scss
+++ b/src/style.scss
@@ -51,6 +51,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/logo/logo.scss';
 @import './blocks/landing/landing.scss';
 @import './blocks/page-join/page-join.scss';
+@import './blocks/room/room.scss';
 
 // UI Kit
 // @import './blocks/ui.page/header-ui/header-ui.scss';
