--- a/src/blocks/room-info/room-info.scss
+++ b/src/blocks/room-info/room-info.scss
@@ -1,9 +1,20 @@
-.room-info__item {
-  display: flex;
-  padding: 20px 0 17px;
-  border-bottom: 1px solid rgba(31, 32, 65, 0.1);
+.room-info {
+
+  &__item {
+    display: flex;
+    padding: 20px 0 17px;
+    border-bottom: 1px solid rgba(31, 32, 65, 0.1);
+  }
+
+  &__item:last-child {
+    border: none;
+  }
+
+  &__icon {
+    margin: 0 15px 0 5px;
+  }
 }
 
-.room-info__icon {
-  margin: 0 15px 0 5px;
-}
+
+
+
