--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -376,7 +376,7 @@ html(lang="ru")
           +comment(
             {author: 'Мурад Сарафанов',
             date: '5 дней назад',
-            photo: 'image.png'},
+            photo: 'murad.png'},
             [1,12],
             'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'
           )
