--- a/src/pages/room-details.pug
+++ b/src/pages/room-details.pug
@@ -22,6 +22,7 @@ block content
           })
         .room__vote
           h2.sub-title.room__description-title Впечатления от номера
+          include ../blocks/chart/chart.pug
       .room__comment
         .room__comment-title.room__description-title
           h2.sub-title Отзывы посетителей номера
