--- a/src/style.scss
+++ b/src/style.scss
@@ -52,6 +52,8 @@ $font-family-title: 'Quicksand';
 @import './blocks/landing/landing.scss';
 @import './blocks/page-join/page-join.scss';
 @import './blocks/room/room.scss';
+@import './blocks/filter-room/filter-room.scss';
+@import './blocks/filter-responsive-triger/filter-responsive-triger.scss';
 
 // UI Kit
 // @import './blocks/ui.page/header-ui/header-ui.scss';
