--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -5,38 +5,33 @@
   background: #e5e5e5;
   color: $text-color;
 
-  &__sidebar {
-    min-width: 266px;
-    padding: 0 2px;
-  
-    & > div {
-      margin-bottom: 30px;
-    }
+  &__inner {
+    max-width: 1440px;
+    margin: 0 auto;
+    background: white;
   }
-  
+
+  &_search {
+    display: flex;
+    justify-content: center;
+    padding: 30px 0 70px;
+    border-bottom: 1px solid $dark_shade_25;
+  }
+
   &__search-result{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-
-    & > div {
-      margin-top: 10px;
-    }
   }
   &__search-content {
-    margin-left: 60px;
+    flex: 0 1 840px;
+    padding: 0 30px;
   }
 }
 
-.page__inner {
-  max-width: 1440px;
-  margin: 0 auto;
-  background: white;
-}
-
-.page_search {
-  display: flex;
-  justify-content: space-between;
-  padding: 30px 140px 70px;
-  border-bottom: 1px solid $dark_shade_25;
+@media (max-width: 960px) {
+  .page_search {
+    position: relative;
+    flex-direction: column;
+  }
 }
