--- a/src/blocks/room-card/room-card.scss
+++ b/src/blocks/room-card/room-card.scss
@@ -6,6 +6,7 @@
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 0px 10px 20px $dark_shade_05;
+  padding: 10px 5px 0;
 }
 
 .room-card__head {
