responsive for header

--- a/src/blocks/nav/nav.pug
+++ b/src/blocks/nav/nav.pug
@@ -9,6 +9,15 @@ mixin nav(navlist)
           span.nav__link= txt
           +nav(url)
 
-//- +nav({TXT1:"url1", txt2:"url2",
-//-   tXt3:{txt31:"url31", txt32:"url32",
-//-       txt33:{txt331:"url331"}}})
+//- nav.nav
+//-   +nav({
+//-     TXT1:"url1",
+//-     txt2:"url2",
+//-     tXt3:{
+//-       txt31:"url31",
+//-       txt32:"url32",
+//-       txt33:{
+//-         txt331:"url331"
+//-       }
+//-     }
+//-   })
