--- a/src/pages/headers-footers.pug
+++ b/src/pages/headers-footers.pug
@@ -10,18 +10,18 @@ html(lang="ru")
     div(style="height:20px")
     main(style="width:1440px;margin:20px auto;")
       header.header
-        .logo
+        .logo.header__logo
           a(href="/")
             include ../blocks/logo/logo.pug
-        nav
+        nav.nav
           +nav({'Home':'#', 'About Us':'#', 'Services':{'Services1':'#', 'Services2':'#', 'Serv':{'serv':'#', 'serv1':'#', 'serv3':{'assa':'#', 'assa2':'#'}}, ser:'#'}, 'Careers':'#', 'News':'#', 'Documentation':'#'})
         +user-login('', 'login', 'register')
       div(style="height:40px")
       header.header
-        .logo
+        .logo.header__logo
           a(href="/")
             include ../blocks/logo/logo.pug
-        nav
+        nav.nav
           +nav({'Home':'#', 'About Us':'#', 'Services':{'Services1':'#', 'Services2':'#'}, 'Careers':'#', 'News':'#', 'Documentation':'#'})
         +user-login('Cosmin Negoita')
       div(style="height:40px")
