--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,7 +1,13 @@
 .header {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   align-items: center;
-  padding: 15px 140px;
+  padding: 0.4% 9.8%;
   background: white;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+
+  &__logo{
+    margin: 10px auto 10px 0;
+  }
 }
