--- a/src/blocks/room-info/room-info.scss
+++ b/src/blocks/room-info/room-info.scss
@@ -2,7 +2,7 @@
 
   &__item {
     display: flex;
-    padding: 20px 0 17px;
+    padding: 20px 0;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
   }
 
