--- a/src/blocks/room/room.scss
+++ b/src/blocks/room/room.scss
@@ -1,27 +1,25 @@
 .room {
   display: flex;
   justify-content: space-between;
-  padding: 70px 140px;
+  padding: 4.8% 9.6%;
   border-bottom: 1px solid $dark_shade_25;
 
-  &__description-title {
-    margin: 30px 0 20px;
+  &__description {
+    padding-right: 2%;
+  }
+
+  &__book-form {
+    margin-bottom: 30px;
   }
 
   &__details {
     display: flex;
-    
-    & h2 {
-      margin-top: 0;
-    }
+    flex-wrap: wrap;
   }
 
   &__info {
     max-width: 290px;
-  }
-
-  &__vote {
-    margin: 0 auto;
+    margin-right: auto;
   }
 
   &__comment {
@@ -29,6 +27,7 @@
 
     &-title {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
     }
@@ -37,13 +36,25 @@
   &__conditions {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   &__rules {
     max-width: 290px;
+    
+    &_title_buletlist {
+      padding-left: 1.1em;
+    }
   }
 
   &__cansel {
     max-width: 340px;
+  }
+}
+
+@media (max-width: 960px) {
+  .room {
+    flex-wrap: wrap-reverse;
+    justify-content: center;
   }
 }
