--- a/src/blocks/dropdown-input/dropdown-input.pug
+++ b/src/blocks/dropdown-input/dropdown-input.pug
@@ -2,24 +2,23 @@ include __button/dropdown-input__button.pug
 include __item/dropdown-input__item.pug
 include ../expand-triger/expand-triger.pug
 
-mixin dropdown-input(label, listitem, button, trigerclass, trigerid, labelText)
+mixin dropdown-input(label, placeholder, listitem, button)
   span.label-cta= label
   div.dropdown-input
-    +expand-triger(trigerclass, trigerid, labelText)
+    .dropdown-input__field
+      span.dropdown-input__field-text= placeholder
+      span.dropdown-input__field-char
     .dropdown-input__item-list
       +dropdown-input__item(listitem)
       +dropdown-input__button(button)
 
-
-
 //- +dropdown-input(
-//-   "field titel",
+//-   "label text",
+//-   "placeholder",
 //-   {
-//-     adult: "взрослые",
-//-     child: "дети",
+//-     bedroom: "спальни",
+//-     bed: "кровати",
+//-     bathroom: "ванные комнать",
 //-   },
-//-   ['очистить', 'применить'],
-//-   'check||burger||pointer',
-//-   'uniq id',
-//-   'field default text'
+//-   []
 //- )
