--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -56,15 +56,13 @@ html(lang="ru")
           span.ui-kit__elemlnt-condition default
           +dropdown-input(
             "dropdown",
+            "Сколько гостей",
             {
               adult: "взрослые",
               child: "дети",
               minichild: "младенцы",
             },
-            ['очистить', 'применить'],
-            'check',
-            '1',
-            'Сколько гостей'
+            ['очистить', 'применить']
           )
         .ui-kit__section-inner_m 
           +input-date_single-range(
@@ -256,28 +254,24 @@ html(lang="ru")
         .ui-kit__section-inner_m(style="width:265px")
           +dropdown-input(
             "dropdown",
+            "удобства",
             {
               bedroom: "спальни",
               bed: "кровати",
               bathroom: "ванные комнаты"
             },
-            [],
-            'check',
-            '2',
-            'удобства'
+            []
           )
         .ui-kit__section-inner_m(style="width:265px")
           +dropdown-input(
             "dropdown",
+            "удобства",
             {
               bedroom: "спальни",
               bed: "кровати",
               bathroom: "ванные комнаты"
             },
-            [],
-            'check',
-            '3',
-            'удобства'
+            []
           )
         .ui-kit__section-inner_m(style="width:265px")
           +dropdown-checkbox(
@@ -353,15 +347,13 @@ html(lang="ru")
       section.ui-kit__section-vertical
         +dropdown-input(
             "dropdown",
+            "Сколько гостей",
             {
               adult: "взрослые",
               child: "дети",
               minichild: "младенцы",
             },
-            ['очистить', 'применить'],
-            'check',
-            '12',
-            'Сколько гостей'
+            ['очистить', 'применить']
           )
         div(style="height:200px;")
         p.label-cta bullet list
