--- a/src/blocks/dropdown-input/dropdown-input.scss
+++ b/src/blocks/dropdown-input/dropdown-input.scss
@@ -26,11 +26,21 @@
       transform: rotate(45deg);
     }
   }
+
+  &__item-list {
+    height: auto;
+    margin: 0;
+    padding: 0 7px 0 15px;
+    box-sizing: border-box;
+    // position: absolute;
+    left: -1px;
+    top: calc(100% - 3px);
+    border-radius: 0 0 4px 4px;
+    border: 1px solid $dark_shade_50;
+    // display: none;
+    background: white;
+  }
 }
 
-@import './__item-list/dropdown-input__item-list.scss';
 @import './__item/dropdown-input__item.scss';
-@import './__item-count/dropdown-input__item-count.scss';
-@import './__item-inner/dropdown-input__item-inner.scss';
 @import './__button/dropdown-input__button.scss';
-@import './__button-block/dropdown-input__button-block.scss';
