--- a/src/blocks/dropdown-input/__item/dropdown-input__item.pug
+++ b/src/blocks/dropdown-input/__item/dropdown-input__item.pug
@@ -3,9 +3,9 @@ mixin dropdown-input__item(item)
     div.dropdown-input__item
       p= label
       div.dropdown-input__item-inner
-        div.dropdown-input__item-count_minus
+        button.dropdown-input__item-minus.dropdown-input__item-button
         input(type="text", name=name, class="dropdown-input__item-count" value="0")
-        div.dropdown-input__item-count_plus
+        button.dropdown-input__item-plus.dropdown-input__item-button
 
 
 //- +dropdown-input__item(
